Added remote config and reading and writing too database  Added email and password and Google Auth too application Added Firebase storage also too upload pictures and retrieve it

--- a/FriendlyChat/FriendlyChatSwift/Info.plist
+++ b/FriendlyChat/FriendlyChatSwift/Info.plist
@@ -29,7 +29,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>REVERSED_CLIENT_ID</string>
+				<string>com.googleusercontent.apps.49408293257-j7eoo8oamq403gid6lgtv1c9fij2ka4h</string>
 			</array>
 		</dict>
 	</array>
